--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <div class="burger-btn__bars"></div>
         </div>
     </button>
-
-    <nav class="nav"></nav>
+    
+    <nav class="nav">
+    </nav>
 
     <header class="header section">
         <h1 class="header__heading">Tropical Paradise</h1>
