--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
                 <h2 class="section-heading">Polecane Wyspy</h2>
 
                 <div class="islands__card" onclick="void(0)">
+                    <!-- FRONT -->
                     <div class="islands__card-img islands__card-img--first">
                         <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
                         <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji</p>
                     </div>
-
+                    <!-- BACK -->
                     <div class="islands__card-info">
                         <h3 class="islands__card-info-title">Wyspa Tiki Taki</h3>
                         <ul class="islands__card-info-list">
@@ -98,16 +99,16 @@
                             <li class="islands__card-info-list-item">Ekskluzywny bar</li>
                             <li class="islands__card-info-list-item">Wysokie palmy</li>
                         </ul>
-
                         <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
                     </div>
                 </div>
                 <div class="islands__card" onclick="void(0)">
+                    <!-- FRONT -->
                     <div class="islands__card-img islands__card-img--second">
                         <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
                         <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji</p>
                     </div>
-
+                    <!-- BACK -->
                     <div class="islands__card-info">
                         <h3 class="islands__card-info-title">Wyspa Toca Toca</h3>
                         <ul class="islands__card-info-list">
@@ -117,16 +118,16 @@
                             <li class="islands__card-info-list-item">Ekskluzywny bar</li>
                             <li class="islands__card-info-list-item">Wysokie palmy</li>
                         </ul>
-
                         <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
                     </div>
                 </div>
                 <div class="islands__card" onclick="void(0)">
+                    <!-- FRONT -->
                     <div class="islands__card-img islands__card-img--third">
                         <h3 class="islands__card-img-title">Wyspa Nobu</h3>
                         <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji</p>
                     </div>
-
+                    <!-- BACK -->
                     <div class="islands__card-info">
                         <h3 class="islands__card-info-title">Wyspa Nobu</h3>
                         <ul class="islands__card-info-list">
@@ -136,7 +137,6 @@
                             <li class="islands__card-info-list-item">Ekskluzywny bar</li>
                             <li class="islands__card-info-list-item">Wysokie palmy</li>
                         </ul>
-
                         <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
                     </div>
                 </div>
