Added javascript for button black bars, footer current year

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
         </section>
 
-        <section class="reviews section-padding section white-section">
+        <section class="reviews section-padding section white-section" id="reviews">
             <h2 class="section-heading">Opinie</h2>
             <div class="wrapper">
                 <div class="reviews__boxes">
@@ -301,7 +301,7 @@
 
         </div>
         <hr>
-        <p class="footer__bottom-text">&copy; <span class="footer__year"></span>Tropical Paradise</p>
+        <p class="footer__bottom-text">&copy; <span class="footer__year"></span> Tropical Paradise</p>
 
     </footer>
 
